cmake_minimum_required(VERSION 3.10)
project(OOP_HW5)

set(CMAKE_CXX_STANDARD 11)

add_library(OOP_HW5 part2/Part2Examples.cpp part2/BoardCell.h part2/CellType.h part2/Direction.h part2/GameBoard.h part2/List.h part2/MoveVehicle.h part2/Printer.h part2/TransposeList.h part2/Utilities.h part2/RushHour.h)

